Use correct contrast grey for .not-set

--- a/app/assets/scss/_case-status.scss
+++ b/app/assets/scss/_case-status.scss
@@ -1,3 +1,7 @@
+.not-set {
+  color: $grey-1;
+}
+
 .status-new {
   color: $green;
   font-weight: 700;
